GNOME Bugzilla – Bug 677313
Battery icon not updated on state change
Last modified: 2012-06-06 16:36:16 UTC
Created attachment 215472 [details] [review] patch On OLPC laptops, running GNOME fallback mode with gnome-settings-daemon-3.4.2, the battery status icon that appears in the gnome-panel tray is not updated with new state. For example, when disconnecting the AC power the icon does not update to the 'battery discharging' icon. Looks like a missing call to update the status icon after we receive a modified GIcon. Here's a patch to fix it.
Review of attachment 215472 [details] [review]: Looks correct to push to gnome-3-4 and master
Thanks. Pushed as fa834c2 (gnome-3-4) and 99528da (master).